--- a/about.html
+++ b/about.html
@@ -6,19 +6,13 @@
     <title>About Us | Elite Install | Our Story</title>
     <meta name="description" content="Learn about Elite Install, a Dallas-based furniture installation company founded on project management experience to provide a better, more reliable partnership for Texas dealers.">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
-    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0d0d0d">
-    <meta name="msapplication-TileColor" content="#0d0d0d">
-    <meta name="theme-color" content="#0d0d0d">
-
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/about.html">
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="page-transition-overlay"></div>
+    <div class="custom-cursor"></div>
+
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
     <header class="main-header" role="banner">
@@ -27,27 +21,24 @@
                 <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
                     <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image" width="180" height="38">
                 </a>
-                <nav class="primary-navigation" aria-label="Main Navigation">
-                    <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-links" aria-haspopup="true">
-                        <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                        <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </button>
-                    <ul class="nav-links" id="nav-links" role="menubar">
-                        <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-                        <li role="none"><a href="about.html" role="menuitem" aria-current="page">About</a></li>
-                        <li role="none"><a href="services.html" role="menuitem">Services</a></li>
-                        <li role="none"><a href="projects.html" role="menuitem">Projects</a></li>
-                        <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
-                    </ul>
-                </nav>
+                <button class="menu-toggle-btn" aria-label="Open Navigation Menu" aria-expanded="false">
+                    <span class="line line-1"></span>
+                    <span class="line line-2"></span>
+                    <span class="line line-3"></span>
+                </button>
             </div>
+        </div>
+        <div class="nav-overlay">
+            <div class="nav-overlay-background" style="background-image: url(images/project-library-placeholder.jpg);"></div>
+            <nav class="nav-overlay-menu">
+                <ul>
+                    <li><a href="index.html" class="nav-link-magnetic"><span>Home</span></a></li>
+                    <li><a href="about.html" class="nav-link-magnetic"><span>About</span></a></li>
+                    <li><a href="services.html" class="nav-link-magnetic"><span>Services</span></a></li>
+                    <li><a href="projects.html" class="nav-link-magnetic"><span>Projects</span></a></li>
+                    <li><a href="contact.html" class="nav-link-magnetic"><span>Contact</span></a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -55,8 +46,8 @@
 
         <section class="hero page-hero">
             <div class="container hero-content">
-                <h1 class="anim-fade-in-up">Built From Experience. Designed For You.</h1>
-                <p class="subtitle anim-fade-in-up" data-delay="100">Elite Install was born from a simple but powerful idea: furniture dealers deserve an installation partner who is as committed to their success as they are. We are not just a crew for hire; we are a strategic partner founded to solve the exact problems we faced in our own careers.</p>
+                <h1 class="anim-fade-in-up">Built From Experience.</h1>
+                <p class="subtitle anim-fade-in-up" data-delay="100">Elite Install was born from a simple but powerful idea: furniture dealers deserve an installation partner as committed to their success as they are.</p>
             </div>
         </section>
 
@@ -70,38 +61,6 @@
                     <p>He lived the daily struggle you know all too well: the missed deadlines from unreliable subs, the budget overruns from inefficiency, and the constant brand damage caused by unprofessional crews on-site. The stress of managing installations often overshadowed the satisfaction of a completed project.</p>
                     <p class="highlight-text">He knew there had to be a better way. A partnership built on transparency, accountability, and a deep respect for the dealer's reputation.</p>
                     <p>So, he built it.</p>
-                    <p>Elite Install was meticulously designed to be the installation company he always wished he could hire. Our entire process is filtered through the lens of a project manager. We anticipate challenges, communicate proactively, and treat every single project with the urgency and professionalism it deserves.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="section section-accented principles-section">
-            <div class="container">
-                <div class="section-header anim-fade-in-up">
-                    <h2>Our Core Commitments</h2>
-                    <p>Our values aren't just words on a page; they are the guiding principles for every action we take on every job site. This is our promise to you.</p>
-                </div>
-                <div class="features-grid">
-                    <article class="feature-card anim-fade-in-up">
-                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div>
-                        <h3>Unwavering Reliability</h3>
-                        <p>Your schedule is our guide. We approach every project with thorough planning and logistical foresight to ensure your timeline is respected and your peace of mind is protected.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="100">
-                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div>
-                        <h3>Radical Professionalism</h3>
-                        <p>Our uniformed crew understands they are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean and orderly site to reflect the quality you promise.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="200">
-                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div>
-                        <h3>Dedicated Expertise</h3>
-                        <p>We get it right the first time. We do not use temporary labor. Our full-time, dedicated team has the training and tools necessary to execute installations efficiently, minimizing punch lists and return trips.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="300">
-                        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div>
-                        <h3>Proactive Communication</h3>
-                        <p>You will always be informed. We establish a clear rhythm of communication and provide a single point of contact, so you never have to guess the status of your project.</p>
-                    </article>
                 </div>
             </div>
         </section>
@@ -149,9 +108,8 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 </html>
