--- a/contact.html
+++ b/contact.html
@@ -15,34 +15,23 @@
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
-    <header class="main-header" role="banner">
-        <div class="header-main-nav">
-            <div class="container nav-container">
-                <a href="index.html" class="logo" aria-label="Elite Install & Haul - Home">
-                    <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image" width="180" height="38">
-                </a>
-                <nav class="primary-navigation" aria-label="Main Navigation">
-                    <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-links" aria-haspopup="true">
-                        <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                        <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                            <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </button>
-                    <ul class="nav-links" id="nav-links" role="menubar">
-                        <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-                        <li role="none"><a href="about.html" role="menuitem">About</a></li>
-                        <li role="none"><a href="services.html" role="menuitem">Services</a></li>
-                        <li role="none"><a href="projects.html" role="menuitem">Projects</a></li>
-                        <li role="none"><a href="contact.html" role="menuitem" aria-current="page">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+    <header class="main-header">
+        <nav class="nav-container container">
+            <a href="index.html" class="logo">
+                <img src="images/logo.svg" alt="Elite Install Logo" class="site-logo-image" width="180" height="38">
+            </a>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html" aria-current="page">Contact</a></li>
+            </ul>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
+                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+            </button>
+        </nav>
     </header>
 
     <main id="main-content">
@@ -136,9 +125,8 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 </html>
