--- a/index.html
+++ b/index.html
@@ -18,7 +18,62 @@
     <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
 
     <link rel="stylesheet" href="style.css">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HomeAndConstructionBusiness",
+      "name": "Elite Install",
+      "image": "https://www.eliteinstallandhaul.com/images/logo.svg",
+      "@id": "https://www.eliteinstallandhaul.com/",
+      "url": "https://www.eliteinstallandhaul.com/",
+      "telephone": "+1-469-380-1551",
+      "priceRange": "$$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Dallas",
+        "addressRegion": "TX",
+        "addressCountry": "US"
+      },
+      "description": "A professional B2B partner for school furniture dealers in Texas, providing reliable, expert installation of educational and FF&E furniture.",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "08:00",
+        "closes": "18:00"
+      },
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Dallas"
+        },
+        {
+          "@type": "City",
+          "name": "Houston"
+        },
+        {
+          "@type": "City",
+          "name": "Austin"
+        },
+        {
+          "@type": "City",
+          "name": "San Antonio"
+        },
+        {
+            "@type": "State",
+            "name": "West Texas"
+        }
+      ]
+    }
+    </script>
 </head>
+    
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
@@ -133,3 +188,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
