--- a/index.html
+++ b/index.html
@@ -99,16 +99,17 @@
     <main id="main-content">
 
         <section class="hero">
-            <div id="hero-canvas-container"></div>
-            <div class="container hero-content">
-                <h1 class="hero-headline-deconstruct">Your Reputation, Installed.</h1>
-                <p class="subtitle anim-fade-in-up" data-delay="100">A new standard in B2B furniture installation has arrived. We are a partner built on a simple promise: to protect your reputation as if it were our own. By prioritizing professionalism and clear communication, we deliver results that build trust with you and your clients.</p>
-                <div class="cta-buttons anim-fade-in-up" data-delay="200">
-                    <a href="services.html" class="btn btn-primary">Explore Our Services</a>
-                    <a href="contact.html" class="btn btn-secondary">Request a Quote</a>
-                </div>
-            </div>
-        </section>
+    <div id="hero-canvas-container"></div>
+    <div class="container hero-content">
+        <h1 class="hero-headline-deconstruct">Your Reputation, Installed.</h1>
+        <!-- NEW SUB-HEADLINE -->
+        <p class="subtitle anim-fade-in-up" data-delay="100">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
+        <!-- NEW, SINGLE CTA BUTTON -->
+        <div class="cta-buttons anim-fade-in-up" data-delay="200">
+            <a href="contact.html" class="btn btn-primary">Request a Free Quote</a>
+        </div>
+    </div>
+</section>
 
         <section class="section section-accented principles-section">
             <div class="container">
@@ -188,4 +189,5 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
 
