--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Install | Texas School Furniture Installation | Dallas, TX</title>
+    <title>Elite Install | Texas Furniture Installation | Dallas, TX</title>
     <meta name="description" content="Elite Install is a professional B2B partner for school furniture dealers in Dallas and across Texas, providing reliable, expert installation of educational and FF&E furniture.">
     <meta name="keywords" content="school furniture installation, educational furniture installer, commercial furniture installation, office furniture installation, FF&E installation, Dallas, Fort Worth, Houston, Austin, San Antonio, Texas, B2B installation services">
 
