Refactor navigation links to use root-relative paths and add Open Graph and FAQ schema for SEO

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
 
     <header class="main-header">
         <nav class="nav-container container">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="images/logo.svg" alt="Elite Install Logo" class="site-logo-image" width="180" height="38">
             </a>
             <ul class="nav-links" id="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column about">
-                    <a href="index.html" class="footer-logo" aria-label="Elite Install & Haul - Home">
+                    <a href="/" class="footer-logo" aria-label="Elite Install & Haul - Home">
                         <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer" width="180" height="38">
                     </a>
                     <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
