--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer-grid">
             <div class="footer-column about">
-                <a href="index.html" class="footer-logo" aria-label="Elite Install & Haul - Home">
+                <a href="/" class="footer-logo" aria-label="Elite Install & Haul - Home">
                     <img src="images/logo.svg" alt="Elite Install & Haul Logo" class="site-logo-image-footer" width="180" height="38">
                 </a>
                 <p>The B2B installation partner delivering professional execution, proactive communication, and unwavering reliability for school furniture dealers in Texas.</p>
