--- a/header.html
+++ b/header.html
@@ -1,18 +1,24 @@
 <header class="main-header">
     <nav class="nav-container container">
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
             <img src="images/logo.svg" alt="Elite Install Logo" class="site-logo-image" width="180" height="38">
         </a>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li class="nav-social">
+                <a href="https://www.linkedin.com/company/eliteinstallandhaul" target="_blank" rel="noopener" aria-label="Elite Install LinkedIn">
+                    <svg width="20" height="20" fill="currentColor" aria-hidden="true" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm15.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"/></svg>
+                </a>
+            </li>
         </ul>
         <div class="header-actions">
     <a href="tel:+14693801551" class="header-phone">(469) 380-1551</a>
     <a href="contact.html" class="btn btn-primary btn-header-quote">Request a Quote</a>
+    <a href="mailto:tylerherrick13@gmail.com" class="header-email" aria-label="Email Elite Install" style="margin-left:1em;">Email</a>
     <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
         <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
         <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
